--- a/styles/styles.css
+++ b/styles/styles.css
@@ -112,3 +112,15 @@ Media Querie for Mobile Devices
         height: 80px;
     }
 }
+
+
+/*Keroppi animation*/
+@keyframes jump-shaking {
+    0% { transform: translateX(0) }
+    25% { transform: translateY(-9px) }
+    35% { transform: translateY(-9px) rotate(17deg) }
+    55% { transform: translateY(-9px) rotate(-17deg) }
+    65% { transform: translateY(-9px) rotate(17deg) }
+    75% { transform: translateY(-9px) rotate(-17deg) }
+    100% { transform: translateY(0) rotate(0) }
+  }
